[gd_scene load_steps=15 format=3 uid="uid://d3iddio7lrb80"]

[ext_resource type="Script" uid="uid://bwxmvtn335l27" path="res://scripts/snake.gd" id="1_jx80r"]
[ext_resource type="Shader" uid="uid://y2inmay3cvl7" path="res://shaders/color_sprite.gdshader" id="2_uialm"]
[ext_resource type="Texture2D" uid="uid://bojkt6hfmdugo" path="res://sprites/npcs/snake.png" id="3_jx80r"]
[ext_resource type="Script" uid="uid://q4mbg6qjql" path="res://scripts/animatable_sprite.gd" id="4_j5tob"]
[ext_resource type="Script" uid="uid://cllpdcivereov" path="res://scripts/health_component.gd" id="5_7fsud"]
[ext_resource type="AudioStream" uid="uid://cid35yflsfp2a" path="res://audio/sfx/Enemy Hurt.wav" id="6_ky1f6"]
[ext_resource type="AudioStream" uid="uid://b1ffuifdb2isj" path="res://audio/sfx/Enemy Dead.wav" id="7_bq3f8"]
[ext_resource type="Script" uid="uid://dat0t2tqvm8b6" path="res://scripts/audio_player.gd" id="8_0rbcd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xwavj"]
shader = ExtResource("2_uialm")
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_uialm"]
atlas = ExtResource("3_jx80r")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y333o"]
atlas = ExtResource("3_jx80r")
region = Rect2(0, 16, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_civ24"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uialm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y333o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j5tob"]
radius = 5.0
height = 22.0

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_w8i8w"]
stream_count = 2
stream_0 = ExtResource("6_ky1f6")
stream_1 = ExtResource("7_bq3f8")

[node name="snake" type="Area2D" groups=["enemy"]]
script = ExtResource("1_jx80r")
speed = 50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_xwavj")
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_civ24")
autoplay = "default"
frame_progress = 0.764051
script = ExtResource("4_j5tob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.94)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_j5tob")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("5_7fsud")
metadata/_custom_type_script = "uid://cllpdcivereov"

[node name="audio_player" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamPlaylist_w8i8w")
script = ExtResource("8_0rbcd")
metadata/_custom_type_script = "uid://dat0t2tqvm8b6"

[node name="raycast_l" type="RayCast2D" parent="."]
position = Vector2(-16, 0)
target_position = Vector2(0, 15)

[node name="raycast_r" type="RayCast2D" parent="."]
position = Vector2(15, 0)
target_position = Vector2(0, 15)
